# DiskDestiny

./: .env.example  README.md  pyproject.toml
disk_destiny/: app.py  config.py  schemes.py
disk_destiny/models/: KNN.py  RandomForest.py  TreeClassifier.py  XGBoost.py  __init__.py  base.py  logistics_regression.py
disk_destiny/models/weights/: RandomForestClassifier.pkl  TreeClassifier.pkl
disk_destiny/params/: column_good.json  medians_value.json  model_coding.json
disk_destiny/utils/: banner.py  data_normalizing.py  other.py
